# spdy-base

./: .gitignore  LICENSE  Makefile  README.txt  SANDBOX-README.txt  SGet.hs  SPing.hs  SServe.hs  ping.hs  spdy-base.cabal  tls-client.hs  tls-server.hs
Network/SPDY/: Client.hs  Compression.hs  Deserialize.hs  Endpoint.hs  Error.hs  Flags.hs  Frames.hs  NetworkConnection.hs  Serialize.hs  Server.hs  Stream.hs  ToWord8.hs  Url.hs
Network/SPDY/Internal/: BoundedBuffer.hs  Constants.hs  Deserialize.hs  PriorityChan.hs  Serialize.hs  ToWord8.hs
efpug-presentation/: Makefile  efpug-spdy.txt
examples/: SGet.hs  SPing.hs  SServe.hs  tls-client.hs  tls-server.hs
notes/: client-considerations.txt  common-endpoint-code.txt  endpoint-client-server.txt  fetching-a-resource.txt  lessons-from-warp.txt  pluggable-server-request-handlers.txt  spdy-2-to-spdy-3.txt  tls-ins-and-outs.txt
src/Network/: SPDY.hs
src/Network/SPDY/: Client.hs  Compression.hs  Frames.hs  Server.hs
src/Network/SPDY/Internal/: BoundedBuffer.hs  Constants.hs
test/: BoundedBufferTests.hs  BuildParseTests.hs  FrameTests.hs  Instances.hs  Main.hs  PriorityChanTests.hs  RawFrameTests.hs  StreamTests.hs
