Name:                spdy-base
Version:             0.1
Synopsis:            Frame data types, serialization and deserialization.

-- A longer description of the package.
-- Description:         

Homepage:            https://github.com/kcharter/spdy-base.git
License:             BSD3
License-file:        LICENSE
Author:              Kevin Charter
Maintainer:          kevin.charter@acm.org
-- Copyright:           
Category:            Web
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  Exposed-modules:     Network.SPDY.Frames
  
  Build-depends:       base >= 3 && < 5,
                       bytestring >= 0.9 && < 0.10
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  