Name:                spdy-base
Version:             0.1
Synopsis:            Frame data types, serialization and deserialization.

-- A longer description of the package.
-- Description:

Homepage:            https://github.com/kcharter/spdy-base.git
License:             BSD3
License-file:        LICENSE
Author:              Kevin Charter
Maintainer:          kevin.charter@acm.org
-- Copyright:
Category:            Web
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >= 1.8


Library
  hs-source-dirs:      src
  Exposed-modules:     Network.SPDY,
                       Network.SPDY.Compression,
                       Network.SPDY.Error,
                       Network.SPDY.Flags,
                       Network.SPDY.Frames,
                       Network.SPDY.Deserialize,
                       Network.SPDY.Endpoint,
                       Network.SPDY.NetworkConnection,
                       Network.SPDY.Serialize,
                       Network.SPDY.Server,
                       Network.SPDY.Stream,
                       Network.SPDY.Client,
                       Network.SPDY.Url,
                       Network.SPDY.Internal.BoundedBuffer,
                       Network.SPDY.Internal.Constants,
                       Network.SPDY.Internal.Deserialize,
                       Network.SPDY.Internal.PriorityChan,
                       Network.SPDY.Internal.Serialize,
                       Network.SPDY.Internal.ToWord8
  Build-depends:       SafeSemaphore == 0.9.0,
                       attoparsec >= 0.10 && < 1,
                       base >= 4 && < 5,
                       blaze-builder >= 0.3 && < 1,
                       bytestring >= 0.10 && < 1,
                       certificate >= 1.3.5 && < 1.4.0,
                       containers >= 0.4 && < 1,
                       crypto-random == 0.0.7,
                       fingertree >= 0.1 && < 1,
                       mtl >= 2.0 && < 3,
                       network >= 2.3 && < 3,
                       time >= 1.2 && < 2,
                       tls == 1.1.5,
                       tls-extra == 0.6.6,
                       zlib-bindings == 0.1.1.3
  GHC-Options:         -W

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:

Test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       spdy-base,
                       attoparsec >= 0.10 && < 1,
                       base >= 4 && < 5,
                       blaze-builder >= 0.3 && < 1,
                       bytestring >= 0.10 && < 1,
                       QuickCheck >= 2 && <= 3,
                       test-framework >= 0.8.0.3,
                       test-framework-quickcheck2 >= 0.3.0.2,
                       zlib-bindings == 0.1.1.3
  GHC-Options:         -W

executable sping
  hs-source-dirs:
    examples
  main-is:
    SPing.hs
  build-depends:
    base >= 4 && < 5,
    options >= 0.1,
    spdy-base
  ghc-options:
    -W

executable sget
  hs-source-dirs:
    examples
  main-is:
    SGet.hs
  build-depends:
    base >= 4 && < 5,
    bytestring >= 0.10 && < 1,
    options >= 0.1,
    spdy-base
  ghc-options:
    -W

executable sserve
  hs-source-dirs:
    examples
  main-is:
    SServe.hs
  build-depends:
    base >= 4 && < 5,
    bytestring >= 0.10 && < 1,
    certificate >= 1.3.5 && < 1.4.0,
    filepath >= 1.3 && < 2,
    network >= 2.4 && < 3,
    options >= 0.1,
    pem >= 0.2.1 && < 1,
    tls == 1.1.5,
    tls-extra == 0.6.6,
    spdy-base
  ghc-options:
    -W

executable tls-client
  hs-source-dirs:
    examples
  main-is:
    tls-client.hs
  build-depends:
    base >= 4 && < 5,
    bytestring >= 0.10 && < 1,
    crypto-random == 0.0.7,
    network >= 2.4 && < 3,
    options >= 0.1,
    tls == 1.1.5,
    tls-extra == 0.6.6,
    spdy-base
  ghc-options:
    -W

executable tls-server
  hs-source-dirs:
    examples
  main-is:
    tls-server.hs
  build-depends:
    base >= 4 && < 5,
    bytestring >= 0.10 && < 1,
    certificate >= 1.3.5 && < 1.4.0,
    crypto-random == 0.0.7,
    network >= 2.4 && < 3,
    options >= 0.1,
    pem >= 0.2.1 && < 1,
    time >= 1.4 && < 2,
    tls == 1.1.5,
    tls-extra == 0.6.6,
    spdy-base
  ghc-options:
    -W
